--- a/app/index.html
+++ b/app/index.html
@@ -14,9 +14,17 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/superselfy.css">
     <!-- endbuild -->
   </head>
   <body>
+
+    <div id="camera">
+      <video id="finder"></video>
+      <div id="shutter">
+        押してね!
+      </div>
+    </div>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
