撮影が可能になった

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
       <div id="shutter">
         押してね!
       </div>
+      <canvas id="picture"></canvas>
     </div>
 
     <!-- build:js(.) scripts/vendor.js -->
