地図が出た!

--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,17 @@
       <canvas id="picture"></canvas>
     </div>
 
+    <div id="map_canvas" style="width:100%; height: 400px"></div>
+
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBZ6xrnw-3B9UQts5gZbifFlGEFXjTNqv4&sensor=false">
+    </scrip>
 
     <!-- build:js(.) scripts/plugins.js -->
     <script src="bower_components/bootstrap/js/affix.js"></script>
