シャッター音がなるようにした

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
   </head>
   <body>
 
+    <audio id="shutter-sound" src="resources/shutter.ogg" preload="auto"></audio>
+
     <div id="camera">
       <video id="finder"></video>
       <div id="shutter">
